# lamps

./: .gitignore  README.md  notes.txt
arduino/: motor_light_behaviour_v2.ino  motor_light_behaviour_v3.ino  motor_light_behaviour_v5.ino
audio_control/: stream-test.py
audio_control/lamps/: __init__.py  audio.py
audio_server/: CMakeLists.txt  lamps-server.cpp  setup.md
gui/deprecated/: GUI.py  LampGUI_v2.py  LampGUI_v2_JSON.py  LampGUI_v3_switch.py  lampGUI.py  lamp_proxy_GUI.py
gui_lamp_control/: LampGUI_v3_working.py  bugs.kv  bugs4.kv  bugs5.kv  bugs6.kv  bugs_gui.py  bugs_proxy_sub_pub.py  lamp.kv
networking/: client_central_bugs.py  lampX_bugs_client.py  lampX_bugs_proxy_motor_v1.py  lampX_bugs_server.py  server_central_bugs.py  sub_pub_central_bugs.py
reference/: bugs_control.py  bugs_control_motor.py  bugs_thread_control.py  lamp_control.py  v2_lamps.py
rpi_lamp_behaviour/: bugs_behaviour.py  bugs_proxy.py  check_status.py  lamp1_bugs_proxy_motor_v1.py  lamp1_bugs_server.py  lampX_bugs_proxy_motor_v1.py  no_audio_behaviour.py  ping_all_lamps.py  start_lamps.sh  stream_control.py  sub_pub.py
tests/: bugs_i2c_test.py  bugs_motor_ttl.py  bugs_ttl_test.py
